--- a/config/model_default.yaml
+++ b/config/model_default.yaml
@@ -24,6 +24,7 @@ training:
   learning_rate: 0.0001
   c_drop_prob: 0.1  # Probability of dropping context (for classifier-free guidance)
   save_frequency: 10  # Save checkpoint every N epochs
+  delete_old_checkpoints: true  # Delete old checkpoints to save disk space
 
   # Learning rate scheduler
   lr_scheduler:
