--- a/config/model_small.yaml
+++ b/config/model_small.yaml
@@ -23,7 +23,8 @@ training:
   batch_size: 128  # Larger batch size possible with smaller model
   learning_rate: 0.0002  # Higher LR for faster convergence
   c_drop_prob: 0.1  # Probability of dropping context (for classifier-free guidance)
-  save_frequency: 5  # Save checkpoint every N epochs
+  save_frequency: 10  # Save checkpoint every N epochs
+  delete_old_checkpoints: true  # Delete old checkpoints to save disk space
 
   # Learning rate scheduler
   lr_scheduler:
